<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable name="mySquares"
                  type="com.raykone.quadraticcalculator.MySquares"/>
    </data>

    <ScrollView android:layout_width="match_parent" android:layout_height="match_parent">


        <androidx.constraintlayout.widget.ConstraintLayout

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".MainActivity">

            <TextView
                    android:text="@string/a"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:layout_width="72dp"
                    android:layout_height="36dp" android:id="@+id/textView_a"
                    android:layout_marginTop="24dp"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginStart="32dp" app:layout_constraintStart_toStartOf="@+id/guideline"
            />
            <com.google.android.material.textfield.TextInputLayout android:layout_width="0dp"
                                                                   android:layout_height="wrap_content"
                                                                   android:id="@+id/inputLayerCoefficientOfx2"
                                                                   app:layout_constraintStart_toEndOf="@+id/textView_a"
                                                                   app:layout_constraintTop_toTopOf="@+id/textView_a"
                                                                   app:layout_constraintEnd_toStartOf="@+id/guideline2"
                                                                   app:layout_constraintBottom_toBottomOf="@+id/textView_a"
                                                                   android:layout_marginStart="32dp"
                                                                   android:layout_marginEnd="16dp"
                                                                   style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="numberDecimal"
                        android:ems="10"
                        android:id="@+id/editText_a"
                        android:hint="Enter Coefficient of X\u00B2"

                         />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                    android:text="@string/b"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:layout_width="72dp"
                    android:layout_height="36dp" android:id="@+id/textView_b"
                    android:layout_marginTop="55dp"
                    app:layout_constraintTop_toBottomOf="@+id/textView_a"
                    android:layout_marginStart="32dp" app:layout_constraintStart_toStartOf="@+id/guideline"/>

            <com.google.android.material.textfield.TextInputLayout android:layout_width="0dp"
                                                                   android:layout_height="wrap_content"
                                                                   app:layout_constraintStart_toEndOf="@+id/textView_b"
                                                                   android:layout_marginStart="32dp"
                                                                   app:layout_constraintTop_toTopOf="@+id/textView_b"
                                                                   app:layout_constraintEnd_toStartOf="@+id/guideline2" android:layout_marginEnd="16dp"
                                                                   app:layout_constraintBottom_toBottomOf="@+id/textView_b"
                                                                   style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="numberDecimal"
                        android:ems="10"
                        android:hint="Enter coefficient of X"
                        android:id="@+id/editText_b"
                        />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                    android:text="@string/c"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:layout_width="72dp"
                    android:layout_height="36dp" android:id="@+id/textView_c"
                    android:layout_marginTop="55dp"
                    app:layout_constraintTop_toBottomOf="@+id/textView_b"
                    android:layout_marginStart="32dp" app:layout_constraintStart_toStartOf="@+id/guideline"/>
            <TextView
                    android:text="@string/x1"
                    android:textSize="28sp"
                    android:gravity="center|center_vertical"
                    android:textStyle="bold"
                    android:layout_width="72dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView_x1" android:layout_marginTop="80dp"
                    app:layout_constraintTop_toBottomOf="@+id/textView_c"
                    android:layout_marginStart="32dp" app:layout_constraintStart_toStartOf="@+id/guideline"/>
            <TextView
                    android:text="@string/x2"
                    android:textSize="28sp"
                    android:textStyle="bold"
                    android:gravity="center|center_vertical"
                    android:layout_width="72dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView_x2" android:layout_marginTop="64dp"
                    app:layout_constraintTop_toBottomOf="@+id/textView_x1"
                    android:layout_marginStart="32dp" app:layout_constraintStart_toStartOf="@+id/guideline"/>
            <com.google.android.material.textfield.TextInputLayout android:layout_width="0dp"
                                                                   android:layout_height="wrap_content"
                                                                   app:layout_constraintStart_toEndOf="@+id/textView_c" android:layout_marginStart="32dp"
                                                                   app:layout_constraintTop_toTopOf="@+id/textView_c"
                                                                   app:layout_constraintEnd_toStartOf="@+id/guideline2" android:layout_marginEnd="16dp"
                                                                   app:layout_constraintBottom_toBottomOf="@+id/textView_c"
                                                                   style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="number"
                        android:ems="10"
                        android:hint="Enter the constant C"
                        android:id="@+id/editText_c"
                />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                    android:text="@string/clear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/button_clear"
                    app:layout_constraintEnd_toStartOf="@+id/button_compute"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/square_two" android:layout_marginTop="72dp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
                    app:layout_constraintHorizontal_bias="0.5"/>
            <Button
                    android:text="@string/compute"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/button_compute"
                    app:layout_constraintEnd_toStartOf="@+id/guideline2" android:layout_marginEnd="16dp"
                    app:layout_constraintStart_toEndOf="@+id/button_clear" app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="@+id/button_clear"/>
            <TextView
                    android:text="@={mySquares.x1}"
                    android:hint="@string/first_square_text"
                    android:textSize="16sp"
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/square_one"
                    app:layout_constraintStart_toEndOf="@+id/textView_x1"
                    android:layout_marginStart="8dp"
                    app:layout_constraintTop_toTopOf="@+id/textView_x1"
                    app:layout_constraintEnd_toStartOf="@+id/guideline2" android:layout_marginEnd="16dp"
                    app:layout_constraintBottom_toBottomOf="@+id/textView_x1"/>
            <TextView
                    android:text="@={mySquares.x2}"
                    android:hint="@string/second_square_text"
                    android:textSize="16sp"
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/square_two" app:layout_constraintStart_toEndOf="@+id/textView_x2"
                    android:layout_marginStart="8dp"
                    app:layout_constraintTop_toTopOf="@+id/textView_x2"
                    app:layout_constraintEnd_toStartOf="@+id/guideline2" android:layout_marginEnd="16dp"
                    app:layout_constraintBottom_toBottomOf="@+id/textView_x2"/>
            <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content"
                                                        android:layout_height="wrap_content" android:id="@+id/guideline"
                                                        app:layout_constraintGuide_begin="16dp"
                                                        android:orientation="vertical"
                                                        app:layout_constraintStart_toStartOf="parent"
            />
            <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content"
                                                        android:layout_height="wrap_content"
                                                        android:id="@+id/guideline2"
                                                        android:orientation="vertical"
                                                        app:layout_constraintGuide_end="16dp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>